--- a/Desktop/Secret Recipes/less/main.less
+++ b/Desktop/Secret Recipes/less/main.less
@@ -6,6 +6,7 @@
     flex-direction: column;
     align-items: center;
 
+    // start of banner image
     .bannerImage {
         width: 100%;
         padding: 0;
@@ -39,6 +40,10 @@
             background: @headercolor;
             border-radius: 10px;
         }
+    } // end of banner image styling
+
+    h3 {
+        padding-top: 4%;
     }
 }
 
@@ -59,13 +64,18 @@
 
             p {
                 width: 85%;
-            }
-        }
+            } // end of paragraph
+        } // end of info
 
-    }
+    } // end of infoboxes
 
     img {
         border-radius: 5px;
+    }
+
+    h3 {
+        padding: 3% 0;
+        text-align: center;
     }
 }
 
