--- a/Desktop/Secret Recipes/About/CSS/about.css
+++ b/Desktop/Secret Recipes/About/CSS/about.css
@@ -134,7 +134,7 @@ html {
   font-family: sans-serif;
 }
 body {
-  width: 100vw;
+  width: 100%;
 }
 h1 {
   font-size: 4rem;
@@ -165,94 +165,144 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 90%;
-  margin: 0 5%;
+  width: 100%;
+  margin: 0;
+}
+@media (max-width: 500px) {
+  header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    height: auto;
+    width: 100%;
+    margin: 0;
+  }
 }
 header img {
   height: 100%;
+  width: auto;
+}
+@media (max-width: 500px) {
+  header img {
+    width: 50%;
+    height: auto;
+  }
 }
 header nav {
   display: flex;
   align-items: flex-end;
   justify-content: flex-end;
-  width: 60%;
+  width: 50%;
 }
 header nav a {
   font-size: 2.5rem;
   text-align: center;
   text-decoration: none;
   color: white;
-  width: 25%;
+  width: 45%;
+}
+@media (max-width: 500px) {
+  header nav a {
+    padding-bottom: 4%;
+  }
+}
+@media (max-width: 500px) {
+  header nav {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
 }
 .topContent {
   width: 90%;
-  margin: 3% 5% 0 5%;
-  padding: 0 3%;
+  margin: 3% 5%;
+  padding: 2%;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  justify-content: space-between;
+  justify-items: center;
 }
-.topContent .bannerImage {
-  width: 100%;
-  padding: 0;
-  position: relative;
+@media (max-width: 1000px) {
+  .topContent {
+    flex-direction: column;
+    align-items: center;
+  }
 }
-.topContent .bannerImage img {
-  width: 100%;
-  margin: 0;
-}
-.topContent .bannerImage .bannerText {
-  position: absolute;
-  top: 30%;
-  width: 100%;
-  text-align: center;
-  background: white;
-  opacity: 80%;
-  padding: 3% 0;
-}
-.topContent .bannerImage a {
-  position: absolute;
-  top: 60%;
-  width: 10%;
-  padding: 2% 0;
-  margin: 0 45%;
-  text-align: center;
-  font-size: 2rem;
-  text-decoration: none;
-  color: white;
-  background: #3f7569;
+.topContent img {
+  width: 50%;
+  min-height: 410px;
+  min-width: 470px;
   border-radius: 10px;
 }
-.topContent h3 {
-  padding-top: 4%;
+@media (max-width: 1000px) {
+  .topContent img {
+    width: 90%;
+  }
 }
-.bottomContent {
-  width: 90%;
-  margin: 0 5% 3% 5%;
-  padding: 3%;
+.topContent .topText {
+  width: 40%;
 }
-.bottomContent .infoBoxes {
-  display: flex;
-  justify-content: space-around;
+@media (max-width: 1000px) {
+  .topContent .topText {
+    width: 90%;
+  }
 }
-.bottomContent .infoBoxes .info {
-  border: 4px solid #9ab4ac;
-  border-radius: 5px;
-  margin: 3%;
-  width: 25%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.topContent .topText h2 {
+  margin: 4%;
 }
-.bottomContent .infoBoxes .info p {
-  width: 85%;
+.bottomContent hr {
+  border: 3px solid #3f7569;
+  margin-top: 2%;
 }
-.bottomContent img {
-  border-radius: 5px;
+.bottomContent .codeIcon {
+  height: 6rem;
+  margin: 0 2% 0 5%;
+  float: left;
 }
 .bottomContent h3 {
-  padding: 3% 0;
+  padding: 1.5% 4%;
+}
+.bottomContent .bioBoxes {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin: 5%;
+}
+.bottomContent .bioBoxes .bioBox {
+  width: 45%;
+  border-radius: 10px;
+}
+.bottomContent .bioBoxes .bioBox h4 {
   text-align: center;
+  width: 100%;
+  margin-bottom: 2%;
+  color: white;
+  background: #9ab4ac;
+  border-radius: 10px;
+  padding: 2% 0;
+}
+.bottomContent .bioBoxes .bioBox img {
+  width: 30%;
+  margin: 0 4%;
+  border-radius: 50%;
+  float: left;
+}
+.bottomContent .bioBoxes .bioBox p {
+  margin: 0 4%;
+}
+.bottomContent .bioBoxes .bioBox p a {
+  margin: 4% 0;
+  text-decoration: none;
+  color: black;
+  font-size: 2.5rem;
+  line-height: 1.5;
+  width: 100%;
+}
+.bottomContent .bioBoxes .bioBox p a .socialIcon {
+  margin-top: 1%;
+  height: 3rem;
+  width: auto;
 }
 footer {
   background: #3f7569;
@@ -263,11 +313,21 @@ footer {
 }
 footer .iconBox {
   height: 100%;
-  width: 20%;
+  width: 30%;
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin: 0 5%;
+}
+@media (max-width: 800px) {
+  footer .iconBox {
+    width: 45%;
+  }
+}
+@media (max-width: 500px) {
+  footer .iconBox {
+    width: 100%;
+  }
 }
 footer .iconBox a .icon {
   height: 50px;
