--- a/Desktop/Secret Recipes/Home/less/footer.less
+++ b/Desktop/Secret Recipes/Home/less/footer.less
@@ -7,7 +7,16 @@ footer {
 
     .iconBox {
         height: 100%;
-        width: 20%;
+        width: 30%;
+
+        @media @tablet{
+            width: 45%;
+        }
+
+        @media @phone {
+            width: 100%;
+        }
+
         .flex();
         justify-content: space-between;
         align-items: center;
