replaced filler text and fine tuned styling

--- a/Desktop/Secret Recipes/Home/less/footer.less
+++ b/Desktop/Secret Recipes/Home/less/footer.less
@@ -24,6 +24,11 @@ footer {
 
         a .icon {
             height: 50px;
+            border-radius: 20%;
+            
+            &:hover {
+                opacity: 60%;
+            }
         }
     }
 }
