--- a/Desktop/Secret Recipes/About/CSS/about.css
+++ b/Desktop/Secret Recipes/About/CSS/about.css
@@ -167,6 +167,12 @@ header {
   align-items: center;
   width: 100%;
   margin: 0;
+  padding: 0 5%;
+}
+@media (max-width: 800px) {
+  header {
+    padding: 0 2%;
+  }
 }
 @media (max-width: 500px) {
   header {
@@ -175,13 +181,19 @@ header {
     align-items: center;
     flex-direction: column;
     height: auto;
-    width: 100%;
     margin: 0;
+    padding: 0;
   }
 }
 header img {
   height: 100%;
   width: auto;
+}
+@media (max-width: 550px) {
+  header img {
+    height: 80%;
+    width: auto;
+  }
 }
 @media (max-width: 500px) {
   header img {
@@ -195,33 +207,60 @@ header nav {
   justify-content: flex-end;
   width: 50%;
 }
-header nav a {
-  font-size: 2.5rem;
-  text-align: center;
-  text-decoration: none;
-  color: white;
-  width: 45%;
+@media (max-width: 800px) {
+  header nav {
+    width: 90%;
+    justify-content: space-around;
+  }
 }
-@media (max-width: 500px) {
-  header nav a {
-    padding-bottom: 4%;
+@media (max-width: 550px) {
+  header nav {
+    justify-content: space-between;
   }
 }
 @media (max-width: 500px) {
   header nav {
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
   }
 }
+header nav a {
+  font-size: 2.5rem;
+  text-align: center;
+  text-decoration: none;
+  color: white;
+  width: 15%;
+  margin-left: 15%;
+}
+header nav a:hover {
+  color: #bfbfbf;
+}
+@media (max-width: 800px) {
+  header nav a {
+    width: 40%;
+    margin: 0;
+  }
+}
+@media (max-width: 500px) {
+  header nav a {
+    padding: 2% 0;
+    width: 100%;
+    border-top: 3px solid #9ab4ac;
+  }
+  header nav a:hover {
+    background: #519687;
+  }
+}
 .topContent {
-  width: 90%;
-  margin: 3% 5%;
-  padding: 2%;
+  width: 100%;
+  margin: 3% 0;
   display: flex;
+  justify-content: center;
+  align-items: center;
   justify-content: space-between;
-  justify-items: center;
 }
 @media (max-width: 1000px) {
   .topContent {
@@ -229,49 +268,109 @@ header nav a {
     align-items: center;
   }
 }
+@media (max-width: 500px) {
+  .topContent {
+    margin-top: 0;
+    padding-top: 0;
+  }
+}
 .topContent img {
   width: 50%;
-  min-height: 410px;
-  min-width: 470px;
+  height: auto;
   border-radius: 10px;
+  margin-left: 5%;
+  flex-shrink: 0;
 }
 @media (max-width: 1000px) {
   .topContent img {
     width: 90%;
+    margin: 0 5%;
+  }
+}
+@media (max-width: 500px) {
+  .topContent img {
+    display: none;
+  }
+}
+.topContent .mobileDev {
+  display: none;
+}
+@media (max-width: 500px) {
+  .topContent .mobileDev {
+    display: block;
+    width: 100%;
+    height: auto;
+    border-radius: 0;
+    margin: 0;
   }
 }
 .topContent .topText {
-  width: 40%;
+  width: 30%;
+  margin-right: 5%;
 }
 @media (max-width: 1000px) {
   .topContent .topText {
     width: 90%;
+    margin: 0 5%;
   }
 }
 .topContent .topText h2 {
   margin: 4%;
 }
-.bottomContent hr {
-  border: 3px solid #3f7569;
-  margin-top: 2%;
+@media (max-width: 1000px) {
+  .topContent .topText h2 {
+    margin-left: 0;
+  }
 }
 .bottomContent .codeIcon {
-  height: 6rem;
+  height: 5rem;
   margin: 0 2% 0 5%;
   float: left;
 }
+@media (max-width: 500px) {
+  .bottomContent .codeIcon {
+    height: 4rem;
+  }
+}
 .bottomContent h3 {
-  padding: 1.5% 4%;
+  padding: 1.5% 4% 0 4%;
+  font-size: 3.5rem;
+}
+.bottomContent hr {
+  border: 3px solid #3f7569;
+  margin-top: 1%;
+}
+@media (max-width: 800px) {
+  .bottomContent hr {
+    margin-top: 2%;
+  }
 }
 .bottomContent .bioBoxes {
   display: flex;
   justify-content: space-around;
-  align-items: center;
+  align-items: flex-start;
   margin: 5%;
+}
+@media (max-width: 800px) {
+  .bottomContent .bioBoxes {
+    flex-direction: column;
+    align-items: center;
+  }
 }
 .bottomContent .bioBoxes .bioBox {
   width: 45%;
   border-radius: 10px;
+  margin-bottom: 5%;
+}
+@media (max-width: 800px) {
+  .bottomContent .bioBoxes .bioBox {
+    width: 65%;
+  }
+}
+@media (max-width: 500px) {
+  .bottomContent .bioBoxes .bioBox {
+    width: 80%;
+  }
 }
 .bottomContent .bioBoxes .bioBox h4 {
   text-align: center;
@@ -292,12 +391,22 @@ header nav a {
   margin: 0 4%;
 }
 .bottomContent .bioBoxes .bioBox p a {
-  margin: 4% 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 4%;
   text-decoration: none;
   color: black;
   font-size: 2.5rem;
   line-height: 1.5;
-  width: 100%;
+}
+.bottomContent .bioBoxes .bioBox p a:hover {
+  opacity: 60%;
+}
+@media (max-width: 500px) {
+  .bottomContent .bioBoxes .bioBox p a {
+    font-size: 2rem;
+  }
 }
 .bottomContent .bioBoxes .bioBox p a .socialIcon {
   margin-top: 1%;
@@ -331,4 +440,8 @@ footer .iconBox {
 }
 footer .iconBox a .icon {
   height: 50px;
+  border-radius: 20%;
+}
+footer .iconBox a .icon:hover {
+  opacity: 60%;
 }
