--- a/Desktop/Secret Recipes/About/less/main.less
+++ b/Desktop/Secret Recipes/About/less/main.less
@@ -1,66 +1,117 @@
 .topContent {
-    width: 90%;
-    margin: 3% 5%;
-    padding: 2%;
-    .flex();
+    width: 100%;
+    margin: 3% 0;
+    // padding: 2%;
+    .flexCenter();
     justify-content: space-between;
-    justify-items: center;
 
     @media @smallScreen {
         flex-direction: column;
         align-items: center;
     }
 
+    @media @phone {
+        margin-top: 0;
+        padding-top: 0;
+    }
+
     img {
         width: 50%;
-        min-height: 410px;
-        min-width: 470px;
+        height: auto;
         border-radius: 10px;
+        margin-left: 5%;
+        flex-shrink: 0;
 
         @media @smallScreen {
             width: 90%;
+            margin: 0 5%;
+        }
+
+        @media @phone {
+            display: none;
+        }
+    }
+
+    .mobileDev {
+        display: none;
+
+        @media @phone {
+            display: block;
+            width: 100%;
+            height: auto;
+            border-radius: 0;
+            margin: 0;
         }
     }
 
     .topText {
-        width: 40%;
+        width: 30%;
+        margin-right: 5%;
 
         @media @smallScreen {
             width: 90%;
+            margin: 0 5%;
         }
 
         h2 {
             margin: 4%;
+
+            @media @smallScreen {
+                margin-left: 0;
+            }
         }
     }
-}
+} // end of topContent
 
 .bottomContent {
 
-    hr {
-        border: 3px solid @headercolor;
-        margin-top: 2%;
-    }
-
     .codeIcon {
-        height: 6rem;
+        height: 5rem;
         margin: 0 2% 0 5%;
         float: left;
+
+        @media @phone {
+            height: 4rem;
+        }
     }
 
     h3 {
-        padding: 1.5% 4%;
+        padding: 1.5% 4% 0 4%;
+        font-size: 3.5rem;
+    }
+
+    hr {
+        border: 3px solid @headercolor;
+        margin-top: 1%;
+
+        @media @tablet {
+            margin-top: 2%;
+        }
     }
 
     .bioBoxes {
         .flex();
         justify-content: space-around;
-        align-items: center;
+        align-items: flex-start;
         margin: 5%;
+
+        @media @tablet {
+            flex-direction: column;
+            align-items: center;
+        }
 
         .bioBox {
             width: 45%;
             border-radius: 10px;
+            margin-bottom: 5%;
+
+            @media @tablet {
+                width: 65%;
+            }
+
+            @media @phone {
+                width: 80%;
+            }
 
             h4 {
                 text-align: center;
@@ -83,12 +134,20 @@
                 margin: 0 4%;
 
                 a {
-                    margin: 4% 0;
+                    .flexCenter;
+                    margin: 4%;
                     text-decoration: none;
                     color: black;
                     font-size: 2.5rem;
                     line-height: 1.5;
-                    width: 100%;
+
+                    &:hover {
+                        opacity: 60%;
+                    }
+
+                    @media @phone {
+                        font-size: 2rem;
+                    }
     
                     .socialIcon {
                         margin-top: 1%;
@@ -97,7 +156,6 @@
                     }
                 }
             }
-
-        }
-    }
+        } //end of biobox styling
+    } //end of bioBoxes styling
 }
