--- a/Desktop/Secret Recipes/Home/CSS/index.css
+++ b/Desktop/Secret Recipes/Home/CSS/index.css
@@ -167,6 +167,12 @@ header {
   align-items: center;
   width: 100%;
   margin: 0;
+  padding: 0 5%;
+}
+@media (max-width: 800px) {
+  header {
+    padding: 0 2%;
+  }
 }
 @media (max-width: 500px) {
   header {
@@ -175,13 +181,19 @@ header {
     align-items: center;
     flex-direction: column;
     height: auto;
-    width: 100%;
     margin: 0;
+    padding: 0;
   }
 }
 header img {
   height: 100%;
   width: auto;
+}
+@media (max-width: 550px) {
+  header img {
+    height: 80%;
+    width: auto;
+  }
 }
 @media (max-width: 500px) {
   header img {
@@ -195,24 +207,51 @@ header nav {
   justify-content: flex-end;
   width: 50%;
 }
+@media (max-width: 800px) {
+  header nav {
+    width: 90%;
+    justify-content: space-around;
+  }
+}
+@media (max-width: 550px) {
+  header nav {
+    justify-content: space-between;
+  }
+}
+@media (max-width: 500px) {
+  header nav {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+}
 header nav a {
   font-size: 2.5rem;
   text-align: center;
   text-decoration: none;
   color: white;
-  width: 45%;
+  width: 15%;
+  margin-left: 15%;
 }
-@media (max-width: 500px) {
+header nav a:hover {
+  color: #bfbfbf;
+}
+@media (max-width: 800px) {
   header nav a {
-    padding-bottom: 4%;
+    width: 40%;
+    margin: 0;
   }
 }
 @media (max-width: 500px) {
-  header nav {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+  header nav a {
+    padding: 2% 0;
+    width: 100%;
+    border-top: 3px solid #9ab4ac;
+  }
+  header nav a:hover {
+    background: #519687;
   }
 }
 .topContent {
@@ -284,8 +323,11 @@ header nav a {
   font-size: 2rem;
   text-decoration: none;
   color: white;
-  background: #3f7569;
+  background: #64ac9c;
   border-radius: 10px;
+}
+.topContent .bannerImage a:hover {
+  background: #3f7569;
 }
 @media (max-width: 800px) {
   .topContent .bannerImage a {
@@ -302,6 +344,9 @@ header nav a {
     background: white;
     color: #3f7569;
     font-weight: bold;
+  }
+  .topContent .bannerImage a:hover {
+    background: white;
   }
 }
 .topContent h3 {
@@ -389,4 +434,8 @@ footer .iconBox {
 }
 footer .iconBox a .icon {
   height: 50px;
+  border-radius: 20%;
+}
+footer .iconBox a .icon:hover {
+  opacity: 60%;
 }
