--- a/Desktop/Secret Recipes/Home/less/header.less
+++ b/Desktop/Secret Recipes/Home/less/header.less
@@ -23,18 +23,21 @@ header {
         padding: 0;
     }
 
-    img {
+    a{
         height: 100%;
-        width: auto;
-
-        @media (max-width: 550px){
-            height: 80%;
+        img {
+            height: 100%;
             width: auto;
-        }
 
-        @media @phone {
-        width: 50%;
-        height: auto;
+            @media (max-width: 550px){
+                height: 80%;
+                width: auto;
+            }
+
+            @media @phone {
+            width: 50%;
+            height: auto;
+            }
         }
     }
 
